fix: header spacing and forms layout MAASENG-2892 (#5361)
- fix: inline forms layout
  - fixes node name edit forms layout when displayed in the title

--- a/src/app/kvm/components/KVMDetailsHeader/_index.scss
+++ b/src/app/kvm/components/KVMDetailsHeader/_index.scss
@@ -1,4 +1,7 @@
 @mixin KVMDetailsHeader {
+  .kvm-details-header {
+      margin-bottom: $spv--medium;
+  }
   .kvm-details-header__title-block {
     border-left: $border;
     padding-left: $sph--large;
