--- a/src/app/kvm/components/LXDHostToolbar/_index.scss
+++ b/src/app/kvm/components/LXDHostToolbar/_index.scss
@@ -24,6 +24,7 @@
       border-left: $border;
       padding-left: $sph--large;
       margin-bottom: $spv--medium;
+      margin-top: $spv--medium;
 
       &:not(:last-of-type) {
         padding-right: $sph--large;
